# ESP32-S3-Touch-LCD-4

./: README.md
examples/Arduino-v3.1.3/examples/01_HelloWorld/: 01_HelloWorld.ino
examples/Arduino-v3.1.3/examples/02_AsciiTable/: 02_AsciiTable.ino
examples/Arduino-v3.1.3/examples/03_Drawing_points/: 03_Drawing_points.ino
examples/Arduino-v3.1.3/examples/05_GFX_PCF85063_simpleTime/: 05_GFX_PCF85063_simpleTime.ino
examples/Arduino-v3.1.3/examples/06_GFX_ESPWiFiAnalyzer/: 06_GFX_ESPWiFiAnalyzer.ino
examples/Arduino-v3.1.3/examples/07_GFX_Clock/: 07_GFX_Clock.ino
examples/Arduino-v3.1.3/examples/08_LVGL_PCF85063_simpleTime/: 08_LVGL_PCF85063_simpleTime.ino
examples/Arduino-v3.1.3/examples/09_LVGL_Widgets/: 09_LVGL_Widgets.ino
examples/Arduino-v3.1.3/examples/10_LVGL_SD/: 10_LVGL_SD.ino
examples/Arduino-v3.1.3/examples/11_TWAItransmit/: 11_TWAItransmit.ino  twai.cpp  twai.h
examples/Docs/: Backlight_function_description.md  CAN Instructions.md  SW6106 Light load description.md
examples/ESP-IDF-v5.3.1/03_RTC_Test/: CMakeLists.txt
examples/ESP-IDF-v5.3.1/04_TWAIreceive/: sdkconfig.defaults
examples/ESP-IDF-v5.3.1/05_TWAItransmit/: CMakeLists.txt  README.md
examples/ESP-IDF-v5.3.1/06_lvgl_demo_v8/: CMakeLists.txt  sdkconfig.defaults
examples/ESP-IDF-v5.3.1/07_lvgl_demo_v9/: CMakeLists.txt  sdkconfig.defaults
examples/ESP-IDF-v5.3.1/08_ESP32-S3-Touch-LCD-4-esp-brookesia/: sdkconfig  sdkconfig.defaults
examples/ESP-IDF-v5.3.1/08_ESP32-S3-Touch-LCD-4-esp-brookesia/components/can/: CMakeLists.txt  can.cpp  can.hpp
(+35 files in other folders)
